# blog

./: .eslintrc.json  .gitignore  .htaccess  .prettierrc.json  .stylelintrc.json  CNAME  DETAILED_RENUMBERING_PLAN.md  EQUATION_NUMBERING_PLAN.md  Gemfile  MIGRATION_DOCUMENTATION.md  README.md  _config.yml  _headers.txt  about.html  art.html  blog.html  connections.html  feed.xml  index.html  manifest.json  nginx.conf.example  offline.html  package-lock.json  package.json  projects.html  robots.txt  service-worker.js  sitemap.xml  subscribe.html  test-ci-cd.sh  validate-w3c.js
_config/: _headers  vercel.json
_data/: journey_sections.yml
_feeds/: atom.xml  feed.json
_includes/: footer.html  header.html  language-switcher.html  localized-image-usage.md  localized-image.html  somafm-player.html  structured-data.html
_layouts/: default.html  portal.html  post.html
_posts/: 2023-07-16-hello-world.md  2024-02-23-the-shifting-state-of-motherhood.md  2024-10-30-bottom-surgery-hurdles-prep-and-joy.md  2024-12-24-trust-the-physician.md  2025-03-14-reliant-to-engineer.md  2025-04-20-wordpress-to-github-pages.md  2025-04-21-creating-tensorflow-programs-with-python.md  2025-04-21-deep-learning-for-malware-analysis.md  2025-05-22-after-launch.md  2025-05-27-multi-provider-ensemble-malware-detection.md  2025-06-11-multi-provider-ensemble-malware-detection.md  2025-08-17-hacker-joy.md  2026-01-18-safety-net.md
_tests/: debug.html  (+2 more)
docs/rocketweenie-port/game/: Cargo.toml
docs/rocketweenie-port/game/.cargo/: config.toml
docs/rocketweenie-port/game/src/: main.rs
(+215 files in other folders)
